# micam

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: fuser.rs
src/: cam.rs  fuser.rs  lib.rs  mic.rs
src/mic/: mic.rs  mod.rs  pulseaudio.rs
