[package]
name = "micam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "fuser"
harness = false

[dependencies]
libc = "0.2.141"
nix = "0.26.2"
tracing = "0.1.37"


[dev-dependencies]
criterion = "0.3"
